[package]
name = "sycamore-wasm-pack-template"
version = "0.2.0"
authors = ["k3d3", "Yew Maintainers <maintainers@yew.rs"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sycamore = "0.8.1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
